Fix some of the regression cause by the non-local variable reworking https://bugs.webkit.org/show_bug.cgi?id=99896

Reviewed by Filip Pizlo.

The non0local variable reworking led to some of the optimisations performed by
the bytecode generator being dropped.  This in turn put more pressure on the DFG
optimisations.  This exposed a short coming in our double speculation propogation.
Now we try to distinguish between places where we should SpecDoubleReal vs generic
SpecDouble.

* dfg/DFGPredictionPropagationPhase.cpp:
(PredictionPropagationPhase):
(JSC::DFG::PredictionPropagationPhase::speculatedDoubleTypeForPrediction):
(JSC::DFG::PredictionPropagationPhase::speculatedDoubleTypeForPredictions):
(JSC::DFG::PredictionPropagationPhase::propagate):


Canonical link: https://commits.webkit.org/117908@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131973 268f45cc-cd09-0410-ab3c-d52691b4dbfc